[gd_scene load_steps=11 format=2]

[ext_resource path="res://gfx/gui/hud/gradient-2.png" type="Texture" id=1]
[ext_resource path="res://scripts/menu-grab-focus.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/Main.gd" type="Script" id=3]
[ext_resource path="res://gfx/bg/forest/forest-1.png" type="Texture" id=4]
[ext_resource path="res://gfx/bg/forest/forest-3.png" type="Texture" id=5]
[ext_resource path="res://gfx/bg/forest/forest-2.png" type="Texture" id=6]
[ext_resource path="res://gfx/gui/logo2.png" type="Texture" id=7]
[ext_resource path="res://fonts/title-theme.tres" type="Theme" id=8]
[ext_resource path="res://tilesets/forest.tres" type="TileSet" id=15]
[ext_resource path="res://fonts/flat-theme.tres" type="Theme" id=16]

[node name="TestSceneNode" type="Node2D"]
pause_mode = 2
position = Vector2( 299, 221 )

[node name="bg" type="ParallaxBackground" parent="."]
follow_viewport_scale = 0.001

[node name="ParallaxLayer2" type="ParallaxLayer" parent="bg"]
motion_scale = Vector2( 0.005, 0 )
motion_mirroring = Vector2( 512, 0 )

[node name="Sprite" type="Sprite" parent="bg/ParallaxLayer2"]
position = Vector2( -26, 121 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( 0, -128 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="bg"]
motion_scale = Vector2( 0.1, 0 )
motion_mirroring = Vector2( 512, 0 )

[node name="Sprite" type="Sprite" parent="bg/ParallaxLayer3"]
position = Vector2( -195, 119 )
texture = ExtResource( 6 )
centered = false
offset = Vector2( 0, -128 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="bg"]
position = Vector2( 9, 3 )
motion_scale = Vector2( 0.2, 0 )
motion_mirroring = Vector2( 512, 0 )

[node name="Sprite" type="Sprite" parent="bg/ParallaxLayer"]
position = Vector2( -84, 119 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( 0, -128 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource( 15 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -786448, 0, 65550, -786447, 0, 65550, -851964, 22, 0, -851963, 29, 0, -851962, 29, 0, -851961, 29, 0, -720912, 0, 65550, -720911, 0, 65550, -786428, 31, 0, -786427, 22, 0, -786426, 29, 0, -786425, 29, 0, -655378, 0, 65550, -655377, 0, 65550, -655376, 0, 65550, -655375, 0, 65550, -655374, 0, 65550, -655373, 0, 65551, -720891, 31, 0, -720890, 22, 0, -720889, 29, 0, -589844, 0, 65550, -589843, 0, 65550, -589842, 0, 65550, -589841, 0, 65550, -589840, 0, 65550, -589839, 0, 65550, -589838, 0, 65550, -589837, 0, 65551, -655354, 28, 0, -655353, 29, 0, -524308, 0, 65550, -524307, 0, 65550, -524306, 0, 65550, -524305, 0, 65550, -524304, 0, 65550, -524303, 0, 65550, -524302, 0, 65550, -524301, 0, 65551, -589818, 28, 0, -589817, 29, 0, -458773, 0, 65550, -458772, 0, 65550, -458771, 0, 65550, -458770, 0, 65550, -458769, 0, 65550, -458768, 0, 65550, -458767, 0, 196621, -458766, 0, 131083, -458765, 0, 131087, -524282, 0, 786440, -524281, 29, 0, -393237, 0, 65550, -393236, 0, 65550, -393235, 0, 65550, -393234, 0, 65550, -393233, 0, 65550, -393232, 0, 65550, -393231, 0, 65550, -393230, 0, 65551, -458748, 25, 0, -458747, 26, 0, -458746, 24, 0, -458745, 29, 0, -327701, 0, 65550, -327700, 0, 65550, -327699, 0, 65550, -327698, 0, 65550, -327697, 0, 196622, -327696, 0, 65550, -327695, 0, 65550, -327694, 0, 65551, -393215, 0, 720901, -393212, 28, 0, -393211, 29, 0, -393210, 0, 786440, -393209, 29, 0, -262165, 0, 65550, -262164, 0, 65550, -262163, 0, 65550, -262162, 0, 65550, -262161, 0, 65550, -262160, 0, 65550, -262159, 0, 65550, -262158, 0, 65551, -327679, 0, 786440, -327677, 29, 0, -327676, 28, 0, -327675, 29, 0, -327674, 0, 786440, -327673, 29, 0, -196628, 0, 65550, -196626, 0, 65550, -196625, 0, 65537, -196624, 0, 65537, -196623, 0, 65550, -196622, 0, 65551, -196616, 0, 131075, -262143, 0, 786440, -262141, 29, 0, -262140, 29, 0, -262139, 29, 0, -262138, 0, 786440, -131090, 0, 65550, -131089, 29, 0, -131088, 29, 0, -131087, 30, 0, -196607, 0, 786440, -196603, 29, 0, -196602, 0, 786440, -65552, 29, 0, -65551, 23, 0, -65550, 26, 0, -65549, 27, 0, -131071, 0, 786440, -16, 29, 0, -15, 29, 0, -14, 29, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 15 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -983062, 0, 0, -983061, 0, 1, -983060, 0, 1, -983059, 0, 1, -983058, 0, 1, -983057, 0, 1, -983056, 0, 1, -983055, 0, 1, -983054, 0, 2, -917527, 0, 0, -917526, 0, 65540, -917525, 0, 65537, -917524, 0, 65537, -917523, 0, 65537, -917522, 0, 65537, -917521, 0, 65537, -917520, 0, 65537, -917519, 0, 65537, -917518, 0, 65539, -917517, 0, 2, -851991, 0, 65536, -851990, 0, 65537, -851989, 0, 65537, -851988, 0, 65537, -851987, 0, 65537, -851986, 0, 65537, -851985, 0, 65537, -851984, 0, 65537, -851983, 0, 65537, -851982, 0, 65537, -851981, 0, 65538, -917501, 1, 0, -786455, 0, 131072, -786454, 0, 4, -786453, 0, 65537, -786452, 0, 65537, -786451, 0, 65537, -786450, 0, 65537, -786449, 0, 65537, -786448, 0, 65537, -786447, 0, 65537, -786446, 0, 65537, -786445, 0, 65538, -851965, 8, 0, -720918, 0, 65536, -720917, 0, 65537, -720916, 0, 65537, -720915, 0, 65537, -720914, 0, 65537, -720913, 0, 65537, -720912, 0, 65537, -720911, 0, 65537, -720910, 0, 65537, -720909, 0, 65538, -786430, 0, 720903, -786429, 0, 524296, -786428, 0, 720904, -786427, 0, 720904, -786426, 0, 720902, -655382, 0, 65536, -655381, 0, 65537, -655380, 0, 65537, -655379, 0, 65537, -655378, 0, 65537, -655377, 0, 65537, -655376, 0, 65537, -655375, 0, 3, -655374, 0, 131073, -655373, 0, 131074, -720893, 0, 589833, -720890, 0, 786440, -589846, 0, 65536, -589845, 0, 65537, -589844, 0, 3, -589843, 0, 131073, -589842, 0, 131073, -589841, 0, 131073, -589840, 0, 131073, -589839, 0, 131074, -655357, 0, 589831, -655354, 0, 786440, -524310, 0, 65536, -524309, 0, 65537, -524308, 0, 65538, -589818, 0, 786440, -458774, 0, 65536, -458773, 0, 3, -458772, 0, 131074, -524285, 0, 720906, -524284, 0, 720909, -524283, 0, 720909, -524282, 0, 720907, -393238, 0, 65536, -393237, 0, 65538, -393228, 0, 131081, -393226, 0, 131078, -393224, 0, 131080, -393223, 0, 65542, -458749, 0, 786445, -458746, 0, 786445, -458744, 0, 589831, -458743, 2, 0, -327702, 0, 65536, -327701, 0, 65538, -327694, 0, 196608, -327693, 0, 196609, -327692, 0, 1, -327691, 0, 1, -327690, 0, 1, -327689, 0, 1, -327688, 0, 1, -327687, 0, 1, -327686, 0, 2, -393215, 0, 720908, -393214, 0, 720909, -393213, 0, 786443, -393210, 0, 786446, -262166, 0, 65536, -262165, 0, 65538, -262159, 0, 0, -262158, 0, 262144, -262157, 0, 262145, -262156, 0, 65537, -262155, 0, 65537, -262154, 0, 65537, -262153, 0, 65537, -262152, 0, 65537, -262151, 0, 65537, -262150, 0, 65538, -262149, 0, 65545, -327676, 13, 0, -327675, 14, 0, -196630, 0, 65536, -196629, 0, 65539, -196628, 0, 1, -196627, 0, 1, -196626, 0, 1, -196625, 0, 1, -196624, 0, 1, -196623, 0, 65540, -196622, 0, 65537, -196621, 0, 65537, -196620, 0, 65537, -196619, 0, 65537, -196618, 0, 65537, -196617, 0, 131075, -196616, 0, 65537, -196615, 0, 65537, -196614, 0, 65539, -196613, 0, 2, -131094, 0, 65536, -131093, 0, 65537, -131092, 0, 65537, -131091, 0, 65537, -131090, 0, 65537, -131089, 0, 65537, -131088, 0, 65537, -131087, 0, 65537, -131086, 0, 65537, -131085, 0, 196612, -131084, 0, 65537, -131083, 0, 65537, -131082, 0, 65537, -131081, 0, 65537, -131080, 0, 65537, -131079, 0, 131076, -131078, 0, 65537, -131077, 0, 65538, -196605, 0, 65542, -196604, 0, 65543, -196602, 0, 196608, -196601, 0, 196609, -196600, 0, 1, -196599, 0, 2, -65558, 0, 65536, -65557, 0, 65537, -65556, 0, 65537, -65555, 0, 131075, -65554, 0, 65537, -65553, 0, 65537, -65552, 0, 65537, -65551, 0, 65537, -65550, 0, 65537, -65549, 0, 65537, -65548, 0, 65537, -65547, 0, 65537, -65546, 0, 65537, -65545, 0, 65537, -65544, 0, 65537, -65543, 0, 65537, -65542, 0, 65537, -65541, 0, 65538, -65539, 0, 131079, -65537, 0, 196608, -131072, 0, 196609, -131071, 0, 1, -131070, 0, 1, -131069, 0, 1, -131068, 0, 1, -131067, 0, 1, -131066, 0, 262144, -131065, 0, 262145, -131064, 0, 65537, -131063, 0, 65538, -22, 0, 65536, -21, 0, 65537, -20, 0, 65537, -19, 0, 65537, -18, 0, 65537, -17, 0, 65537, -16, 0, 65537, -15, 0, 65537, -14, 0, 65537, -13, 0, 65537, -12, 0, 196613, -11, 0, 65537, -10, 0, 65537, -9, 0, 65537, -8, 0, 65537, -7, 0, 65537, -6, 0, 65537, -5, 0, 65539, -4, 0, 1, -3, 0, 1, -2, 0, 1, -1, 0, 262144, -65536, 0, 262145, -65535, 0, 65537, -65534, 0, 65537, -65533, 0, 65537, -65532, 0, 65537, -65531, 0, 65537, -65530, 0, 65537, -65529, 0, 65537, -65528, 0, 65537, -65527, 0, 65538, 65514, 0, 65536, 65515, 0, 65537, 65516, 0, 65537, 65517, 0, 65537, 65518, 0, 65537, 65519, 0, 65537, 65520, 0, 65537, 65521, 0, 65537, 65522, 0, 65537, 65523, 0, 65537, 65524, 0, 65537, 65525, 0, 65537, 65526, 0, 65537, 65527, 0, 65537, 65528, 0, 65537, 65529, 0, 65537, 65530, 0, 65537, 65531, 0, 65537, 65532, 0, 65537, 65533, 0, 65537, 65534, 0, 65537, 65535, 0, 65537, 0, 0, 65537, 1, 0, 65537, 2, 0, 65537, 3, 0, 65537, 4, 0, 65537, 5, 0, 65537, 6, 0, 65537, 7, 0, 65537, 8, 0, 65537, 9, 0, 65538, 131050, 0, 131072, 131051, 0, 131073, 131052, 0, 131073, 131053, 0, 131073, 131054, 0, 131073, 131055, 0, 131073, 131056, 0, 131073, 131057, 0, 131073, 131058, 0, 131073, 131059, 0, 131073, 131060, 0, 131073, 131061, 0, 131073, 131062, 0, 131073, 131063, 0, 131073, 131064, 0, 131073, 131065, 0, 131073, 131066, 0, 131073, 131067, 0, 131073, 131068, 0, 131073, 131069, 0, 131073, 131070, 0, 131073, 131071, 0, 131073, 65536, 0, 131073, 65537, 0, 131073, 65538, 0, 131073, 65539, 0, 131073, 65540, 0, 131073, 65541, 0, 131073, 65542, 0, 131073, 65543, 0, 131073, 65544, 0, 131073, 65545, 0, 131074 )

[node name="Pause-gradient" type="Sprite" parent="."]
position = Vector2( -82, -97 )
scale = Vector2( 1.20455, 1.13169 )
texture = ExtResource( 1 )
flip_h = true

[node name="Logo" type="Sprite" parent="."]
position = Vector2( -165, -107 )
texture = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -23.0
margin_top = -178.0
margin_right = 73.0
margin_bottom = 27.0
theme = ExtResource( 8 )
custom_constants/separation = 9
script = ExtResource( 3 )

[node name="Play" type="Button" parent="VBoxContainer"]
margin_right = 96.0
margin_bottom = 34.0
text = "Play"
script = ExtResource( 2 )

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 43.0
margin_right = 96.0
margin_bottom = 77.0
text = "Options"

[node name="info" type="Button" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 96.0
margin_bottom = 120.0
text = "Info"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 129.0
margin_right = 96.0
margin_bottom = 163.0
text = "Quit"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -292.0
margin_top = 1.0
margin_right = -31.0
margin_bottom = 63.0
theme = ExtResource( 16 )
text = "v0.1,0 - nightly"

[connection signal="pressed" from="VBoxContainer/Play" to="VBoxContainer" method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="VBoxContainer" method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/info" to="VBoxContainer" method="_on_info_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="VBoxContainer" method="_on_Quit_pressed"]
